# ralph-claude-code

./: .gitattributes  .gitignore  .mcp.json  .ralphrc  .tapps-mcp.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sandbox  FAILSAFE.md  FAILURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  KILLSWITCH.md  MIGRATING.md  OPERATOR-NOTES.md  README.md  RELEASE.md  SECURITY.md  SPECIFICATION_WORKSHOP.md  TESTING.md  agent-models.json  create_files.sh  flake.nix  generate_version_manifest.sh  install.sh  llms.txt  package-lock.json  package.json  ralph.cmd  ralph.ps1  ralph_cost_report.sh  ralph_enable.sh  ralph_enable_ci.sh  ralph_import.sh  ralph_loop.sh  ralph_monitor.sh  ralph_upgrade_project.sh  sample-prd.md  (+2 more)
.claude/: settings.json
.claude/agents/: ralph-architect.md  ralph-coordinator.md  ralph-reviewer.md  ralph-tester.md  ralph.md  tapps-docs-reviewer.md  tapps-docs-validator.md  tapps-frontend-reviewer.md  tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md
.claude/hooks/: tapps-memory-auto-recall.sh  tapps-post-docs-validate.sh  tapps-post-edit.sh  tapps-post-linear-list.sh  tapps-post-linear-snapshot-get.sh  tapps-post-report.sh  tapps-post-session-start.sh  tapps-post-validate.sh  tapps-pre-bash.sh  tapps-pre-compact.sh  tapps-pre-linear-list.sh  tapps-pre-linear-write.sh  tapps-pre-session-start-gate.sh  tapps-session-compact.sh  tapps-session-start.sh  tapps-stop.sh  tapps-subagent-start.sh  tapps-subagent-stop.sh  tapps-task-completed.sh  tapps-user-prompt-submit.sh
.claude/rules/: integration-hygiene.md  linear-standards.md  python-quality.md  security.md  tapps-pipeline.md
.cursor/: hooks.json  mcp.json
.cursor/agents/: tapps-docs-reviewer.md  tapps-docs-validator.md  tapps-frontend-reviewer.md
.cursor/hooks/: tapps-after-edit.sh  tapps-before-mcp.sh  tapps-mcp-zombie-cleanup.sh  tapps-memory-auto-recall.sh  tapps-stop.sh
.cursor/rules/: agent-scope.mdc  autonomy.mdc  config-files.mdc  linear-standards.mdc  python-quality.mdc  security.mdc  tapps-pipeline.md  tapps-pipeline.mdc  tapps-python-quality.mdc  test-quality.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: tapps-quality.md  tapps-researcher.md
.github/instructions/: quality.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: codeql-analysis.yml  test.yml  update-badges.yml
.ralph/: fix_plan.md  fix_plan.md.archive
.ralph/hooks/: on-session-start.sh  on-stop.sh  on-task-completed.sh  protect-ralph-files.sh  validate-command.sh
docs/: ARCHITECTURE.md  GITHUB_SETUP_GUIDE.md  GLOSSARY.md  LINEAR-WORKFLOW.md  OPERATIONS.md  OPERATOR-EDITS.md  RALPH-STACK-GUIDE.md  README.md  TAPPS_MCP_REQUIREMENTS.md  TROUBLESHOOTING.md  UPGRADE-PROMPT.md  api-reference.md  architecture.html  cli-reference.md  sdk-guide.md  sdk-migration-strategy.md
docs/code-review/: 2026-01-08-cli-parsing-tests-review.md
docs/decisions/: 0001-dual-condition-exit-gate.md  0002-hook-based-response-analysis.md  0003-linear-task-backend.md  0004-epic-boundary-qa-deferral.md  0005-bash-sdk-duality.md  0006-delete-legacy-mode.md  0007-async-pr-merge-via-pending-queue-vs-github-merge-queue.md  0008-parallel-tickets-via-teammates-not-coordinator-fanout.md  README.md
docs/specs/: EPIC-STORY-INDEX.md  README.md  brief-schema.md  campaign-prompt-tap-2493.md  claude-code-2026-enhancements.md  epic-adaptive-timeout.md  epic-agent-evals.md  epic-agent-memory.md  epic-agent-teams-parallelism.md  epic-brain-design-refinements.md  epic-sdk-async.md  (+254 more)
lib/: audit.sh  backup.sh  brain_client.sh  branch_cleanup.sh  brief.sh  circuit_breaker.sh  complexity.sh  context_management.sh  coordinator_rpc.sh  coordinator_session.sh  enable_core.sh  exec_helpers.sh  github_issues.sh  import_graph.sh  linear_backend.sh  linear_optimizer.sh  memory.sh  metrics.sh  notifications.sh  pending_merges.sh  plan_optimizer.sh  pricing.sh  qa_failures.sh  recommendation_repetition.sh  response_analyzer.sh  sandbox.sh  skill_retro.sh  skills_install.sh  task_sources.sh  telemetry_analyze.sh  timeout_utils.sh  tracing.sh  wizard_utils.sh
scripts/: apply-agent-models.sh  close-stale-issues.sh
sdk/: AGENTS.md  pyproject.toml
sdk/ralph_sdk/: __init__.py  __main__.py  agent.py  agent_base.py  agent_guards.py  agent_invocation.py  agent_loop.py  agent_models.py  agent_reporting.py  agent_session.py  circuit_breaker.py  circuit_state.py  complexity.py  config.py  config_parsers.py  context.py  converters.py  cost.py  cost_models.py  cost_pricing.py  cost_routing.py  decomposition.py  evidence.py  evidence_extractors.py  files_changed.py  graph_builders.py  import_graph.py  memory.py  metrics.py  parsing.py  permission_denials.py  plan_optimizer.py  plan_parser.py  project_detect.py  prompt_cache.py  stall_detectors.py  state.py  state_null.py  state_protocol.py  status.py  (+3 more)
sdk/tests/: test_agent.py  test_cancel_tap675.py  test_circuit_breaker.py  test_config.py  test_context_tap674.py  test_converters.py  test_cost.py  test_e2e.py  test_evidence.py  test_memory.py  test_parsing.py  test_plan_optimizer.py  test_rotate_session_tap671.py  test_state.py  test_status.py  test_tools.py
templates/: .gitignore  AGENT.md  PROMPT.md  fix_plan.md  ralph.config.json  ralphrc.template
tests/: mock_claude.sh  test_stuck_loop_detection.sh
(+244 files in other folders)
