[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-sdk"
version = "2.0.0"
description = "Ralph Agent SDK — autonomous AI development loop for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "aiofiles>=24.0",
]
authors = [
    {name = "Ralph Contributors"},
]
keywords = ["claude", "ai", "agent", "sdk", "autonomous", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
tracing = [
    "opentelemetry-api>=1.20",
]

[project.scripts]
ralph-sdk = "ralph_sdk.__main__:main"

[tool.setuptools.packages.find]
include = ["ralph_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
